log
Sat 30 Mar 2024 10:24:13 PM UTC: 
 tests:  0|6
total_score: 0/70
31c9e62
Sat 30 Mar 2024 10:25:39 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list[0] = (List *)malloc(sizeof(List));]
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:33:42: error: expected statement before ‘]’ token
   33 |   list[0] = (List *)malloc(sizeof(List));]
      |                                          ^
Compilation failed
348e246
Sat 30 Mar 2024 10:25:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:17: error: invalid initializer
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |                 ^
list.c:33:46: error: expected statement before ‘]’ token
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |                                              ^
list.c:33:7: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   int list[0] = (List *)malloc(sizeof(List));]
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ba0b7c5
Sat 30 Mar 2024 10:26:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:17: error: invalid initializer
   33 |   int list[0] = (List *)malloc(sizeof(List));
      |                 ^
list.c:33:7: error: unused variable ‘list’ [-Werror=unused-variable]
   33 |   int list[0] = (List *)malloc(sizeof(List));
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
a3bd2a2
Sat 30 Mar 2024 10:26:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:17: error: invalid initializer
   33 |   int list[0] = (List *)malloc(sizeof(List));
      |                 ^
list.c:34:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   34 |   return list;
      |          ^~~~
list.c:34:10: error: function returns address of local variable [-Werror=return-local-addr]
cc1: all warnings being treated as errors
Compilation failed
aed3bd7
Sat 30 Mar 2024 10:28:56 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘lista’ undeclared (first use in this function)
   33 |   lista->prev = NULL;
      |   ^~~~~
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef634fa
Sat 30 Mar 2024 10:30:01 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a8e919f
Sat 30 Mar 2024 10:32:37 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
637a938
Sat 30 Mar 2024 10:35:09 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   51 |   list->current = list->next;
      |                       ^~
Compilation failed
f075a85
Sat 30 Mar 2024 10:35:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
d81d713
Sat 30 Mar 2024 10:36:09 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|5
total_score: 15/70
a25be95
Sat 30 Mar 2024 10:37:01 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c876d87
Sat 30 Mar 2024 10:40:28 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bb5876e
Sat 30 Mar 2024 10:41:37 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
842b591
Sat 30 Mar 2024 10:45:38 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
af29aeb
Sat 30 Mar 2024 10:46:27 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
86ea278
Sat 30 Mar 2024 11:04:47 PM UTC: 
 list.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:105:2: error: expected ‘;’ before ‘void’
  105 | n
      |  ^
      |  ;
  106 | void pushCurrent(List * list, void * data)
      | ~~~~
Compilation failed
a1c7dc6
Sat 30 Mar 2024 11:05:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bfebfeb
Sat 30 Mar 2024 11:06:43 PM UTC: 
 list.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
2b80318
Sat 30 Mar 2024 11:09:23 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|2
total_score: 45/70
64334bf
